Fixed the css alignment

--- a/client/src/components/SchoolDetails/SchoolDetails.scss
+++ b/client/src/components/SchoolDetails/SchoolDetails.scss
@@ -12,6 +12,13 @@
 		width: 200px;
 		margin-top: 1rem;
 	}
+
+	&__tag {
+		display: flex;
+		align-items: center;
+		flex-wrap: wrap;
+		gap: 0.25rem;
+	}
 }
 
 .selected {
